--- a/app/src/app/features/portfolio-galaxy/portfolio-galaxy.component.scss
+++ b/app/src/app/features/portfolio-galaxy/portfolio-galaxy.component.scss
@@ -11,6 +11,13 @@
   width: 100%;
   height: 100%;
   min-height: 100vh;
+  isolation: isolate;
+}
+
+.portfolio-ui-layer {
+  position: relative;
+  z-index: 100000;
+  pointer-events: none;
 }
 
 .portfolio-galaxy {
